--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,7 +9,7 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="405dp"
+        android:layout_width="match_parent"
         android:layout_height="625dp"
         android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
