--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="rich_black_65">#A6042A2B</color>
     <color name="maximum_blue">#5EB1BF</color>
     <color name="maximum_blue_45">#735EB1BF</color>
+    <color name="maximum_blue_80">#CC5EB1BF</color>
     <color name="light_cyan">#CDEDF6</color>
     <color name="mandarin">#EF7B45</color>
     <color name="mandarin_80">#CCEF7B45</color>
