--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -55,29 +55,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonConfirmation" />
 
-    <TextView
-        android:id="@+id/textViewHint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/confirmation_text"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/rich_black_80"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/viewConfirmationBackground"
-        app:layout_constraintStart_toStartOf="@+id/viewConfirmationBackground"
-        app:layout_constraintTop_toTopOf="@+id/viewConfirmationBackground" />
-
     <View
         android:id="@+id/viewBorders"
         android:layout_width="320dp"
         android:layout_height="200dp"
         android:layout_margin="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/white_border"
         app:layout_constraintEnd_toEndOf="@+id/viewConfirmationBackground"
         app:layout_constraintStart_toStartOf="@+id/viewConfirmationBackground"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHint" />
+        app:layout_constraintTop_toTopOf="@+id/viewConfirmationBackground" />
 
     <TextView
         android:id="@+id/textViewDoctorName"
@@ -188,8 +175,8 @@
 
     <Button
         android:id="@+id/buttonConfirmAppointment"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="109dp"
+        android:layout_height="50dp"
         android:background="@drawable/mandarin_border_12dp"
         android:text="@string/confirm"
         android:textAllCaps="false"
@@ -203,8 +190,8 @@
 
     <Button
         android:id="@+id/buttonCancel"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="109dp"
+        android:layout_height="50dp"
         android:background="@drawable/mandarin_border_12dp"
         android:text="@string/cancel"
         android:textAllCaps="false"
