--- a/app/src/main/res/layout/credits_fragment.xml
+++ b/app/src/main/res/layout/credits_fragment.xml
@@ -9,8 +9,8 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="403dp"
-        android:layout_height="680dp"
+        android:layout_width="412dp"
+        android:layout_height="678dp"
         android:background="@drawable/ic_rectangles_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -19,27 +19,26 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="193dp"
-        android:layout_height="183dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="197dp"
+        android:layout_height="177dp"
         android:src="@drawable/ic_team_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_developed_by" />
 
     <TextView
         android:id="@+id/tv_developed_by"
-        android:layout_width="145dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins"
         android:gravity="center_vertical"
         android:text="@string/developed_by"
         android:textColor="@color/rich_black_80"
         android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
@@ -49,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="236dp"
         android:fontFamily="@font/poppins"
         android:textAlignment="center"
         android:textColor="@color/rich_black_80"
